// Copyright (c) 2021 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

//
// Protocol buffer messages used by the participant state key-value utilities
// for implementing a Daml ledger backed by a key-value store.
//
// These messages should only be produced and consumed by the methods in
// `KeyValueCommitting`, `KeyValueConsumption` and `KeyValueSubmission` objects.
//

syntax = "proto3";

package com.daml.ledger.participant.state.kvutils;

option java_package = "com.daml.ledger.participant.state.kvutils";
option csharp_namespace = "Com.Daml.Ledger.Participant.State.KVUtils";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "com/daml/daml_lf_dev/daml_lf.proto";
import "com/daml/lf/transaction.proto";
import "com/daml/ledger/configuration/ledger_configuration.proto";
import "com/daml/ledger/participant/state/kvutils/store/state.proto";

message DamlSubmitterInfo {
  repeated string submitters = 1;
  string command_id = 2;
  string application_id = 3;
  reserved 4; // was maximum_record_time
  oneof deduplication_period {
    google.protobuf.Timestamp deduplicate_until = 5 [deprecated = true]; // Read-only for backwards compatibility
    google.protobuf.Duration deduplication_duration = 6;
    string deduplication_offset = 7;
  }
  string submission_id = 9;
}

// Daml transaction entry, used in both `DamlSubmission` and `DamlLogEntry`.
// Contains the original relative transaction as produced by Daml Engine, along
// with submitter information and metadata (see Ledger API `commands.proto` for
// their source).
message DamlTransactionEntry {
  // The original submitted transaction, with relative identifiers.
  com.daml.lf.transaction.Transaction transaction = 1;

  // The submitting party and metadata about the submitted command.
  // The submitting party is authorized against the submitting participant
  // by looking at the party allocation. The metadata is used to deduplicate
  // command submissions.
  DamlSubmitterInfo submitter_info = 2;

  // Workflow identifier is an opaque string specific to the
  // submitting application that is visible over Ledger API. The workflow
  // identifier has no predefined meaning and applications are free to use
  // it as they see fit.
  string workflow_id = 3;

  // The ledger effective time of the transaction. This timestamp is used
  // during validation/reinterpretation of the transaction as the source of
  // time. This timestamp is checked against the ledger configuration which defines
  // the bounds for valid timestamps in relation to the ledger record time
  // (the time at which the transaction is committed).
  google.protobuf.Timestamp ledger_effective_time = 4;

  // The nonce used to generate contract ids
  bytes submission_seed = 5;

  // The time used to derive contract ids
  google.protobuf.Timestamp submission_time = 6;

  // The pre-computed transaction blinding information.
  DamlTransactionBlindingInfo blinding_info = 7;
}

// A transaction's blinding information, consisting of disclosure and
// divulgence info.
//
// See com.daml.lf.transaction.BlindingInfo for more details.
message DamlTransactionBlindingInfo {
  // The disclosure of a transaction node to a set of local parties.
  message DisclosureEntry {
    string node_id = 1;
    repeated string disclosed_to_local_parties = 2;
  }

  // The divulgence of a contract to a set of local parties.
  message DivulgenceEntry {
    string contract_id = 1;
    repeated string divulged_to_local_parties = 2;
    com.daml.lf.transaction.ContractInstance contract_instance = 3;
  }

  // Disclosure, specified in terms of local transaction node IDs.
  repeated DisclosureEntry disclosures = 1;

  // Divulgence, specified in terms of contract IDs.
  // Note: if this info was produced by blinding a transaction
  // containing only contract ids, it may also contain contracts
  // produced in the same transaction.
  repeated DivulgenceEntry divulgences = 2;
}

// A transaction rejection entry.
message DamlTransactionRejectionEntry {
  DamlSubmitterInfo submitter_info = 1;
  reserved 5; // was reason.maximum_record_time_exceeded

  // Whether this rejection should be considered a definite answer; i.e., whether this rejection
  // signals that no other transaction with the same change-id can be accepted or rejected.
  //
  // False for all rejections before the rank-based deduplication is implemented.
  bool definite_answer = 22;

  oneof reason {

    // Rejections used by both participant.state v1 and v2 API.
    Duplicate duplicate_command = 6;
    SubmitterCannotActViaParticipant submitter_cannot_act_via_participant = 8;
    InvalidLedgerTime invalid_ledger_time = 9;

    //
    // Rejections used by participant.state.v1 API.
    // Note that these are deprecated.
    //
    Inconsistent inconsistent = 2 [deprecated = true];
    Disputed disputed = 3 [deprecated = true];
    ResourcesExhausted resources_exhausted = 4 [deprecated = true];
    PartyNotKnownOnLedger party_not_known_on_ledger = 7 [deprecated = true];

    //
    // Rejections used by participant.state.v2 API.
    //
    ValidationFailure validation_failure = 10;
    DuplicateKeys internally_duplicate_keys = 11;
    InconsistentKeys internally_inconsistent_keys = 12;
    InconsistentContracts externally_inconsistent_contracts = 13;
    DuplicateKeys externally_duplicate_keys = 14;
    InconsistentKeys externally_inconsistent_keys = 15;
    MissingInputState missing_input_state = 16;
    RecordTimeOutOfRange record_time_out_of_range = 17;
    CausalMonotonicityViolated causal_monotonicity_violated = 18;
    SubmittingPartyNotKnownOnLedger submitting_party_not_known_on_ledger = 19;
    PartiesNotKnownOnLedger parties_not_known_on_ledger = 20;
    InvalidParticipantState invalid_participant_state = 21;
  }
}
// A public package upload.
// Daml-LF packages will be deduplicated based on their hashes. Only unique
// ones will be added to the key-value storage. Deduplication has no impact on the
// upload result.
message DamlPackageUploadEntry {
  // A unique string scoped to a particular participant for matching the
  // request with the result.
  // Implementers are free to select adequate mechanism e.g. UUID or similar.
  string submission_id = 1;

  // List of archives to be uploaded.
  repeated daml_lf_dev.Archive archives = 2;

  // Description provided by the backing participant describing where it got
  // the package from, e.g., when, where, or by whom the packages were
  // uploaded.
  string source_description = 3;

  // Uploading participant's id.
  string participant_id = 4;
}

// A message indicating that package upload was unsuccessful.
// If validation of any of the uploaded packages fails, the whole upload fails
// and a rejection message is produced.
message DamlPackageUploadRejectionEntry {
  // An id selected by the submitter, can be used for matching rejection with
  // the original upload entry.
  string submission_id = 1;

  // Id of the participant that uploaded the package.
  string participant_id = 2;

  oneof reason {
    Invalid invalid_package = 3;
    ParticipantNotAuthorized participant_not_authorized = 4;
    Duplicate duplicate_submission = 5;
  }
}

// A log entry describing a rejected configuration change.
message DamlConfigurationRejectionEntry {
  // A unique string scoped to a particular participant for matching the
  // request with the result.
  string submission_id = 1;

  // Submitting participant's id.
  string participant_id = 2;

  // The new proposed configuration that was rejected.
  com.daml.ledger.configuration.LedgerConfiguration configuration = 3;

  oneof reason {
    ParticipantNotAuthorized participant_not_authorized = 4;
    GenerationMismatch generation_mismatch = 5;
    Invalid invalid_configuration = 6;
    TimedOut timed_out = 7;
    Duplicate duplicate_submission = 8;
  }
}

// An allocation of party name and assignment of a party to a given
// participant.
// A party can only be hosted once (this may not be true in more
// sophisticated ledgers in the future).
message DamlPartyAllocationEntry {
  // A unique string scoped to a particular participant.
  // Implementers are free to select adequate mechanism e.g. UUID or similar.
  string submission_id = 1;

  // The party name to be allocated.
  string party = 2;

  // Allocating participant's id.
  string participant_id = 3;

  // A display name associated with the given party.
  string display_name = 4;
}

// A message indicating that party allocation was unsuccessful.
message DamlPartyAllocationRejectionEntry {
  // An id selected by the submitter, can be used for matching rejection with
  // the original upload entry.
  string submission_id = 1;

  // Uploading participant's id.
  string participant_id = 2;

  oneof reason {
    AlreadyExists already_exists = 3;
    Invalid invalid_name = 4;
    ParticipantNotAuthorized participant_not_authorized = 5;
    Duplicate duplicate_submission = 6;
  }
}

// Errors

//
// Used by participant.state.v1 API.
//

// The transaction relied on contracts or keys being active that were no longer active.
message Inconsistent {
  string details = 1;
}

// The transaction has been disputed.
// Dispute occurs when the Daml model conformance or authorization fails.
message Disputed {
  string details = 1;
}

// Committer did not have sufficient resources to process the transaction.
message ResourcesExhausted {
  string details = 1;
}

// The transaction submission exceeded its maximum record time.
message MaximumRecordTimeExceeded {
  string details = 1;
}

// The ledger time of the transaction submission violates some constraint.
message InvalidLedgerTime {
  string details = 1;
  google.protobuf.Timestamp ledger_time = 2;
  google.protobuf.Timestamp lower_bound = 3;
  google.protobuf.Timestamp upper_bound = 4;
}

// The committer has already seen a command/submission with the same deduplication
// key during its implementation specific deduplication window.
message Duplicate {
  string details = 1;
}

// A party mentioned as a stakeholder or actor has not been on-boarded on
// the ledger.
message PartyNotKnownOnLedger {
  string details = 1;
}

// The submitting party cannot act via the participant to which the request has been sent.
message SubmitterCannotActViaParticipant {
  string details = 1;
  string submitter_party = 2;
  string participant_id = 3;
}

// Submitted request content was not valid: a Daml package, a party name
// or a configuration.
message Invalid {
  string details = 1;
}

// Participant not authorized to submit the request.
message ParticipantNotAuthorized {
  string details = 1;
}

// A mismatch in the configuration generation, that is, the
// new configuration did not carry a generation that was one
// larger than previous generation.
message GenerationMismatch {
  int64 expected_generation = 1;
}

// The request timed out, e.g. record time exceeded maximum record time.
message TimedOut {
  google.protobuf.Timestamp record_time = 1;
  google.protobuf.Timestamp maximum_record_time = 2;
}

// The requested entity already exists.
message AlreadyExists {
  string details = 1;
}

//
// Rejections used by participant.state.v2 API.
//
message ValidationFailure {
  string details = 1;
}
message DuplicateKeys {
}
message InconsistentKeys {
}
message InconsistentContracts {
}
message MissingInputState {
  com.daml.ledger.participant.state.kvutils.store.DamlStateKey key = 1;
}
message InvalidParticipantState {
  string details = 1;
  map<string, string> metadata = 2;
}
message RecordTimeOutOfRange {
  google.protobuf.Timestamp minimum_record_time = 1;
  google.protobuf.Timestamp maximum_record_time = 2;
}
message CausalMonotonicityViolated {
}
message SubmittingPartyNotKnownOnLedger {
  string submitter_party = 1;
}
message PartiesNotKnownOnLedger {
  repeated string parties = 1;
}
